<resources>
    <string name="app_name">ListenEnglish</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="on_device">On device</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning...</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Playlist">Playlist</string>
    <string name="folders">Folders</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="add_playlist">Add to playlist</string>
    <string name="remove_file">Remove file</string>
    <string name="create_playlist">Create playlist</string>
    <string name="play_playlist">Play playlist</string>

    <string name="not_blank">The value required</string>
    <string name="enter_playlist_name">Enter playlist name</string>
</resources>