<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:paddingLeft="@dimen/_15sdp"
    android:paddingTop="@dimen/_15sdp"
    android:paddingRight="@dimen/_15sdp"
    android:paddingBottom="@dimen/_15sdp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_playlist"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp" />

    <EditText
        android:id="@+id/edit_playlist_name"
        style="@style/EdtAcc"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/enter_playlist_name" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/TvNotifyError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_playlist_name"
        android:text="@string/not_blank"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/tv_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@color/color_gray" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>
</RelativeLayout>